alarm demo fixed some bugs

--- a/旅客系统/module/demo/modal.html
+++ b/旅客系统/module/demo/modal.html
@@ -1,9 +1,9 @@
 
-<div id="btn-alert" class="ui red button">alert</div>
-<div id="btn-alert-transparent" class="ui orange button">transparent alert</div>
-<div id="btn-confirm" class="ui green button">confirm</div>
-<div id="btn-dialog" class="ui blue button">dialog</div>
-<div id="btn-msg" class="ui pink button">message</div>
+<span id="btn-alert" class="ui red button">alert</span>
+<span id="btn-alert-transparent" class="ui orange button">transparent alert</span>
+<span id="btn-confirm" class="ui green button">confirm</span>
+<span id="btn-dialog" class="ui blue button">dialog</span>
+<span id="btn-msg" class="ui pink button">message</span>
 
 
 <!--dialog-->
