--- a/旅客系统/module/flow/passenger-single.html
+++ b/旅客系统/module/flow/passenger-single.html
@@ -28,12 +28,6 @@
 				</div>
 				<div class="column">
 					<div class="field">
-						<label>证件号码</label>
-						<input type="text" name="" placeholder="">
-					</div>
-				</div>
-				<div class="column">
-					<div class="field">
 						<label>出生日期</label>
 						<div class="ui icon input">
 							<input class="ui-datapicker" type="text">
@@ -50,6 +44,12 @@
 				<div class="column">
 					<div class="field">
 						<label>身高（CM）</label>
+						<input type="text" name="" placeholder="">
+					</div>
+				</div>
+				<div class="eight wide column">
+					<div class="field">
+						<label>证件号码</label>
 						<input type="text" name="" placeholder="">
 					</div>
 				</div>
@@ -169,9 +169,20 @@
 			<div class="ui divider"></div>
 			
 			<div class="doubling column row">
+				<div class="column">
+					<div class="field">
+						<label>布局</label>
+						<textarea type="text" name="" placeholder=""></textarea>
+					</div>
+				</div>
+			</div>
+			
+			<div class="ui divider"></div>
+			
+			<div class="doubling column row">
 				<div class="right aligned column">
-					<button class="ui primary large button" type="submit">添加</button>
-					<button class="ui large button" type="reset">重置</button>
+					<button class="ui primary button" type="submit"><i class="plus icon"></i>添加</button>
+					<button class="ui button" type="reset"><i class="undo icon"></i>重置</button>
 				</div>
 			</div>
 			
