--- a/旅客系统/module/flow/warning.html
+++ b/旅客系统/module/flow/warning.html
@@ -3,8 +3,8 @@
 	<b>可选查询：</b>
 	<a href="#" class="ui label blue bottom pointing">默认</a>
 	<a href="#" class="ui label">姓名、证件号码</a>
-	<a href="#" class="ui label">航班日期段</a>
-	<a href="#" class="ui label">航班号</a>
+	<a href="#" class="ui label">办案人员</a>
+	<a href="#" class="ui label">布控类型</a>
 </div>
 
 <div id="form-search" class="ui secondary segment clearing">
@@ -60,14 +60,12 @@
 				<th class="collapsing"><div class="ui fitted checkbox"><input type="checkbox"></div></th>
 				<th class="collapsing">行号</th>
 				<th>姓名</th>
-				<th>证件类型</th>
+				<th>性别</th>
 				<th>证件号码</th>
-				<th>航班号</th>
-				<th>起飞航站</th>
-				<th>到达航站</th>
-				<th>离港时间</th>
-				<th>抵港时间</th>
-				<th>座位</th>
+				<th>布控类型</th>
+				<th>预警时间</th>
+				<th>联系人</th>
+				<th>反馈</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -81,8 +79,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -94,8 +90,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -107,8 +101,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr class="active">
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -120,8 +112,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -133,8 +123,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -146,8 +134,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -159,8 +145,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -172,8 +156,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -185,8 +167,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -198,8 +178,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -211,8 +189,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -224,8 +200,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -237,8 +211,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -250,8 +222,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -263,8 +233,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -276,8 +244,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -289,8 +255,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -302,8 +266,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -315,8 +277,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -328,8 +288,6 @@
 				<td>cell</td>
 				<td>cell</td>
 				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 		</tbody>
 	</table>
@@ -361,168 +319,96 @@
 
 </div>
 
+
 <!--dialogs-->
-<div id="detail-passenger" class="ui coupled modal ui-dialog">
+<div id="detail" class="ui coupled modal ui-dialog">
 	<i class="close icon ui-dialog-close"></i>
 	<div class="header">
-		<i class="users icon"></i>离岗详细信息
+		<i class="alarm icon"></i>预警详细信息
 	</div>
 	<div class="content">
 		<table class="ui celled unstackable table">
 			<tbody>
 				<tr>
-					<td class="right aligned collapsing"><b>中文名：</b></td>
+					<td class="right aligned collapsing"><b>姓名：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>英文名：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>旅客名：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>旅客中间名：</b></td>
+					<td class="right aligned collapsing"><b>曾用名：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>旅客姓：</b></td>
+					<td class="right aligned collapsing"><b>性别：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>证件类型：</b></td>
+					<td class="right aligned collapsing"><b>民族：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
 					<td class="right aligned collapsing"><b>证件号码：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>身份类型：</b></td>
+					<td class="right aligned collapsing"><b>出生日期：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>旅客姓：</b></td>
+					<td class="right aligned collapsing"><b>口音：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>证件类型：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>证件号码：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>身份类型：</b></td>
+					<td class="right aligned collapsing"><b>身高：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>旅客姓：</b></td>
+					<td class="right aligned collapsing"><b>体貌特征：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>证件类型：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>证件号码：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>身份类型：</b></td>
+					<td class="right aligned collapsing"><b>户籍地区划：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>旅客姓：</b></td>
+					<td class="right aligned collapsing"><b>户籍地详址：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>证件类型：</b></td>
+					<td class="right aligned collapsing"><b>布控原因：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>证件号码：</b></td>
+					<td class="right aligned collapsing"><b>布控类型：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>身份类型：</b></td>
+					<td class="right aligned collapsing"><b>联系单位：</b></td>
+					<td>2</td>
+				</tr>
+				<tr>
+					<td class="right aligned collapsing"><b>联系人1：</b></td>
+					<td>2</td>
+					<td class="right aligned collapsing"><b>联系人1座机/手机：</b></td>
+					<td>2</td>
+				</tr>
+				<tr>
+					<td class="right aligned collapsing"><b>联系人2：</b></td>
+					<td>2</td>
+					<td class="right aligned collapsing"><b>联系人2座机/手机：</b></td>
+					<td>2</td>
+				</tr>
+				<tr>
+					<td class="right aligned collapsing"><b>布控开始时间：</b></td>
+					<td>2</td>
+					<td class="right aligned collapsing"><b>布控结束时间：</b></td>
 					<td>2</td>
 				</tr>
 			</tbody>
 		</table>
-	</div>
-	<div class="actions">
-		<span class="ui button deny">关闭</span>
-	</div>
-</div>
-
-<div id="detail-flight" class="ui coupled modal ui-dialog">
-	<i class="close icon ui-dialog-close"></i>
-	<div class="header">
-		<i class="plane icon"></i>航班详细信息
-	</div>
-	<div class="content">
+		
 		<table class="ui celled unstackable table">
 			<tbody>
 				<tr>
-					<td class="right aligned collapsing"><b>航班号：</b></td>
+					<td class="right aligned collapsing"><b>反馈报告人：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>航班公司：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>计划起飞时间：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>计划到达时间：</b></td>
+					<td class="right aligned collapsing"><b>反馈报告时间：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>实际起飞时间：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>实际到达时间：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>航班机型：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>航班桥位：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>离港航站：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>抵达航站：</b></td>
-					<td>2</td>
+					<td class="right aligned collapsing"><b>处理反馈：</b></td>
+					<td colspan="3">2</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	<div class="actions">
-		<span class="ui button deny">关闭</span>
+		<div class="ui button deny">关闭</div>
 	</div>
 </div>
 
-<div id="detail-class" class="ui coupled modal ui-dialog">
-	<i class="close icon ui-dialog-close"></i>
-	<div class="header">
-		<i class="plane icon"></i>旅客舱位信息
-	</div>
-	<div class="content">
-		<div class="ui grid">
-			<div class="ten wide column">
-				<img class="ui image" src="img/temp-chat-01.jpg">
-			</div>
-			<div class="six wide column">
-				<table class="ui celled unstackable table">
-					<tbody>
-						<tr>
-							<td class="right aligned collapsing"><b>旅客：</b></td>
-							<td>2</td>
-						</tr>
-						<tr>
-							<td class="right aligned collapsing"><b>座位号：</b></td>
-							<td>2</td>
-						</tr>
-						<tr>
-							<td class="right aligned collapsing"><b>航班号：</b></td>
-							<td>2</td>
-						</tr>
-						<tr>
-							<td class="right aligned collapsing"><b>航空公司：</b></td>
-							<td>2</td>
-						</tr>
-						<tr>
-							<td class="right aligned collapsing"><b>机型：</b></td>
-							<td>2</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
-	<div class="actions">
-		<span class="ui button deny">关闭</span>
-	</div>
-</div>
