--- a/旅客系统/module/info/control-flight.html
+++ b/旅客系统/module/info/control-flight.html
@@ -40,8 +40,12 @@
 					</div>
 				</div>
 			</div>
+			<div class="column row">
+				<div class="right aligned column">
+					<span class="ui primary button">搜索</span>
+				</div>
+			</div>
 		</div>
-		<button class="ui primary right floated button clearing" type="submit">搜索</button>
 	</form>
 </div>
 
@@ -346,8 +350,8 @@
 		</table>
 	</div>
 	<div class="actions">
-		<div class="ui button deny">关闭</div>
+		<span class="ui button deny">关闭</span>
 	</div>
 </div>
 
-<script src="module/info/deploy-flight.js"></script>
+<script src="module/info/control-flight.js"></script>
