--- a/旅客系统/module/info/control-passenger.html
+++ b/旅客系统/module/info/control-passenger.html
@@ -3,8 +3,8 @@
 	<b>可选查询：</b>
 	<a href="#" class="ui label blue bottom pointing">默认</a>
 	<a href="#" class="ui label">姓名、证件号码</a>
-	<a href="#" class="ui label">航班日期段</a>
-	<a href="#" class="ui label">航班号</a>
+	<a href="#" class="ui label">办案人员</a>
+	<a href="#" class="ui label">布控类型</a>
 </div>
 
 <div id="form-search" class="ui secondary segment clearing">
@@ -59,24 +59,18 @@
 			<tr>
 				<th class="collapsing"><div class="ui fitted checkbox"><input type="checkbox"></div></th>
 				<th class="collapsing">行号</th>
-				<th>姓名</th>
-				<th>证件类型</th>
+				<th>对象姓名</th>
+				<th>性别</th>
 				<th>证件号码</th>
-				<th>航班号</th>
-				<th>起飞航站</th>
-				<th>到达航站</th>
-				<th>离港时间</th>
-				<th>抵港时间</th>
-				<th>座位</th>
+				<th>布控类型</th>
+				<th>联系人</th>
+				<th>布控时间</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>1</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -93,16 +87,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>3</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -119,16 +107,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>5</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -145,16 +127,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>7</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -171,9 +147,6 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
@@ -184,16 +157,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>10</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -210,16 +177,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>2</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -236,16 +197,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>4</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -262,16 +217,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>6</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -288,16 +237,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>8</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -314,16 +257,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>10</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -361,73 +298,74 @@
 
 </div>
 
+
 <!--dialogs-->
-<div id="detail-passenger" class="ui coupled modal ui-dialog">
+<div id="detail-person" class="ui coupled modal ui-dialog">
 	<i class="close icon ui-dialog-close"></i>
 	<div class="header">
-		<i class="users icon"></i>离岗详细信息
+		<i class="user icon"></i>预警人员详细信息
 	</div>
 	<div class="content">
 		<table class="ui celled unstackable table">
 			<tbody>
 				<tr>
-					<td class="right aligned collapsing"><b>中文名：</b></td>
+					<td class="right aligned collapsing"><b>姓名：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>英文名：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>旅客名：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>旅客中间名：</b></td>
+					<td class="right aligned collapsing"><b>曾用名：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>旅客姓：</b></td>
+					<td class="right aligned collapsing"><b>性别：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>证件类型：</b></td>
+					<td class="right aligned collapsing"><b>民族：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
 					<td class="right aligned collapsing"><b>证件号码：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>身份类型：</b></td>
+					<td class="right aligned collapsing"><b>出生日期：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>旅客姓：</b></td>
+					<td class="right aligned collapsing"><b>口音：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>证件类型：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>证件号码：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>身份类型：</b></td>
+					<td class="right aligned collapsing"><b>身高：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>旅客姓：</b></td>
+					<td class="right aligned collapsing"><b>体貌特征：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>证件类型：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>证件号码：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>身份类型：</b></td>
+					<td class="right aligned collapsing"><b>户籍地区划：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>旅客姓：</b></td>
+					<td class="right aligned collapsing"><b>户籍地详址：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>证件类型：</b></td>
+					<td class="right aligned collapsing"><b>布控原因：</b></td>
 					<td>2</td>
 				</tr>
 				<tr>
-					<td class="right aligned collapsing"><b>证件号码：</b></td>
+					<td class="right aligned collapsing"><b>布控类型：</b></td>
 					<td>2</td>
-					<td class="right aligned collapsing"><b>身份类型：</b></td>
+					<td class="right aligned collapsing"><b>联系单位：</b></td>
+					<td>2</td>
+				</tr>
+				<tr>
+					<td class="right aligned collapsing"><b>联系人1：</b></td>
+					<td>2</td>
+					<td class="right aligned collapsing"><b>联系人1座机/手机：</b></td>
+					<td>2</td>
+				</tr>
+				<tr>
+					<td class="right aligned collapsing"><b>联系人2：</b></td>
+					<td>2</td>
+					<td class="right aligned collapsing"><b>联系人2座机/手机：</b></td>
+					<td>2</td>
+				</tr>
+				<tr>
+					<td class="right aligned collapsing"><b>布控开始时间：</b></td>
+					<td>2</td>
+					<td class="right aligned collapsing"><b>布控结束时间：</b></td>
 					<td>2</td>
 				</tr>
 			</tbody>
@@ -438,91 +376,5 @@
 	</div>
 </div>
 
-<div id="detail-flight" class="ui coupled modal ui-dialog">
-	<i class="close icon ui-dialog-close"></i>
-	<div class="header">
-		<i class="plane icon"></i>航班详细信息
-	</div>
-	<div class="content">
-		<table class="ui celled unstackable table">
-			<tbody>
-				<tr>
-					<td class="right aligned collapsing"><b>航班号：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>航班公司：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>计划起飞时间：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>计划到达时间：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>实际起飞时间：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>实际到达时间：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>航班机型：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>航班桥位：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>离港航站：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>抵达航站：</b></td>
-					<td>2</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-	<div class="actions">
-		<span class="ui button deny">关闭</span>
-	</div>
-</div>
 
-<div id="detail-class" class="ui coupled modal ui-dialog">
-	<i class="close icon ui-dialog-close"></i>
-	<div class="header">
-		<i class="plane icon"></i>旅客舱位信息
-	</div>
-	<div class="content">
-		<div class="ui grid">
-			<div class="ten wide column">
-				<img class="ui image" src="img/temp-chat-01.jpg">
-			</div>
-			<div class="six wide column">
-				<table class="ui celled unstackable table">
-					<tbody>
-						<tr>
-							<td class="right aligned collapsing"><b>旅客：</b></td>
-							<td>2</td>
-						</tr>
-						<tr>
-							<td class="right aligned collapsing"><b>座位号：</b></td>
-							<td>2</td>
-						</tr>
-						<tr>
-							<td class="right aligned collapsing"><b>航班号：</b></td>
-							<td>2</td>
-						</tr>
-						<tr>
-							<td class="right aligned collapsing"><b>航空公司：</b></td>
-							<td>2</td>
-						</tr>
-						<tr>
-							<td class="right aligned collapsing"><b>机型：</b></td>
-							<td>2</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
-	<div class="actions">
-		<span class="ui button deny">关闭</span>
-	</div>
-</div>
+<script src="module/info/control-passenger.js"></script>
