--- a/旅客系统/module/info/flight.html
+++ b/旅客系统/module/info/flight.html
@@ -39,8 +39,12 @@
 					</div>
 				</div>
 			</div>
+			<div class="column row">
+				<div class="right aligned column">
+					<span class="ui primary button">搜索</span>
+				</div>
+			</div>
 		</div>
-		<button class="ui primary right floated button clearing" type="submit">搜索</button>
 	</form>
 </div>
 
@@ -336,7 +340,7 @@
 		</table>
 	</div>
 	<div class="actions">
-		<div class="ui button deny">关闭</div>
+		<span class="ui button deny">关闭</span>
 	</div>
 </div>
 
@@ -379,6 +383,6 @@
 		</div>
 	</div>
 	<div class="actions">
-		<div class="ui button deny">关闭</div>
+		<span class="ui button deny">关闭</span>
 	</div>
 </div>
