--- a/旅客系统/module/info/warning.html
+++ b/旅客系统/module/info/warning.html
@@ -40,8 +40,12 @@
 					</div>
 				</div>
 			</div>
+			<div class="column row">
+				<div class="right aligned column">
+					<span class="ui primary button">搜索</span>
+				</div>
+			</div>
 		</div>
-		<button class="ui primary right floated button clearing" type="submit">搜索</button>
 	</form>
 </div>
 
