--- a/旅客系统/module/maintain/report.html
+++ b/旅客系统/module/maintain/report.html
@@ -1,47 +1,39 @@
 
-<div id="labels-search" class="ui large labels ui-tabs">
-	<b>可选查询：</b>
-	<a href="#" class="ui label blue bottom pointing">默认</a>
-	<a href="#" class="ui label">姓名、证件号码</a>
-	<a href="#" class="ui label">办案人员</a>
-	<a href="#" class="ui label">布控类型</a>
-</div>
-
 <div id="form-search" class="ui secondary segment clearing">
 	<form class="ui small form">
 		<div class="ui grid fields">
-			<div class="stackable doubling four column row">
+			<div class="stackable doubling three column row">
 				<div class="column">
 					<div class="field">
-						<label>字段</label>
+						<label>名称</label>
 						<input type="text" name="" placeholder="">
 					</div>
 				</div>
 				<div class="column">
 					<div class="field">
-						<label>字段</label>
-						<input type="text" name="" placeholder="">
+						<label>提交日期</label>
+						<div class="ui icon input">
+							<input class="ui-datapicker" type="text">
+							<i class="calendar icon"></i>
+						</div>
 					</div>
 				</div>
 				<div class="column">
 					<div class="field">
-						<label>字段</label>
-						<select class="ui compact dropdown">
-							<option>1</option>
-							<option>2</option>
-							<option>3</option>
-						</select>
-					</div>
-				</div>
-				<div class="column">
-					<div class="field">
-						<label>字段</label>
-						<input type="text" name="" placeholder="">
+						<label>&nbsp;</label>
+						<div class="ui icon input">
+							<input class="ui-datapicker" type="text">
+							<i class="calendar icon"></i>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="column row">
+				<div class="right aligned column">
+					<span class="ui primary button">搜索</span>
+				</div>
+			</div>
 		</div>
-		<button class="ui primary right floated button clearing" type="submit">搜索</button>
 	</form>
 </div>
 
@@ -55,21 +47,15 @@
 			<tr>
 				<th class="collapsing"><div class="ui fitted checkbox"><input type="checkbox"></div></th>
 				<th class="collapsing">行号</th>
-				<th>对象姓名</th>
-				<th>性别</th>
-				<th>证件号码</th>
-				<th>布控类型</th>
-				<th>联系人</th>
-				<th>布控时间</th>
+				<th>提交日期</th>
+				<th>提交人</th>
+				<th>月报名称</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>1</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -80,16 +66,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>3</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -100,76 +80,10 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>5</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>6</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>7</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>8</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>9</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>10</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
 				<td>1</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -180,6 +94,24 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
+			</tr>
+			<tr>
+				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
+				<td>3</td>
+				<td>cell1</td>
+				<td>cell</td>
+				<td>cell</td>
+			</tr>
+			<tr>
+				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
+				<td>1</td>
+				<td>cell1</td>
+				<td>cell</td>
+				<td>cell</td>
+			</tr>
+			<tr>
+				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
+				<td>2</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -190,76 +122,66 @@
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
+			</tr>
+			<tr>
+				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
+				<td>1</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>4</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>5</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
+				<td>2</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>6</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>7</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
+				<td>3</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>8</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
-			</tr>
-			<tr>
-				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>9</td>
-				<td>cell1</td>
-				<td>cell</td>
-				<td>cell</td>
+				<td>1</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
 			</tr>
 			<tr>
 				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
-				<td>10</td>
+				<td>2</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
+			</tr>
+			<tr>
+				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
+				<td>3</td>
+				<td>cell1</td>
+				<td>cell</td>
+				<td>cell</td>
+			</tr>
+			<tr>
+				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
+				<td>1</td>
+				<td>cell1</td>
+				<td>cell</td>
+				<td>cell</td>
+			</tr>
+			<tr>
+				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
+				<td>2</td>
+				<td>cell1</td>
+				<td>cell</td>
+				<td>cell</td>
+			</tr>
+			<tr>
+				<td><div class="ui fitted checkbox"><input type="checkbox"></div></td>
+				<td>3</td>
 				<td>cell1</td>
 				<td>cell</td>
 				<td>cell</td>
@@ -294,83 +216,32 @@
 
 </div>
 
-
 <!--dialogs-->
-<div id="detail-person" class="ui coupled modal ui-dialog">
+<div id="detail" class="ui coupled modal ui-dialog">
 	<i class="close icon ui-dialog-close"></i>
 	<div class="header">
-		<i class="user icon"></i>预警人员详细信息
+		<i class="file text icon"></i>报告
 	</div>
 	<div class="content">
-		<table class="ui celled unstackable table">
-			<tbody>
-				<tr>
-					<td class="right aligned collapsing"><b>姓名：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>曾用名：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>性别：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>民族：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>证件号码：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>出生日期：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>口音：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>身高：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>体貌特征：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>户籍地区划：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>户籍地详址：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>布控原因：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>布控类型：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>联系单位：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>联系人1：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>联系人1座机/手机：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>联系人2：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>联系人2座机/手机：</b></td>
-					<td>2</td>
-				</tr>
-				<tr>
-					<td class="right aligned collapsing"><b>布控开始时间：</b></td>
-					<td>2</td>
-					<td class="right aligned collapsing"><b>布控结束时间：</b></td>
-					<td>2</td>
-				</tr>
-			</tbody>
-		</table>
+		<h2 class="center aligned">2015年3月份旅客系统运维服务报告</h2>
+		<div class="ui center aligned basic segment">报告人：张辉华</div>
+		<div class="ui left aligned basic segment">
+			<p>　　当月系统采集120万人次旅客信息，其中从中航信离港系统（DCS）采集100万，春秋离港系统采集20万。当月系统追逃名单共2000人次，其中新增布控名单23人次，系统报警120人次，其中手工布控人员报警20人次，追逃报警100人次。</p>
+			<p>　　当月系统累计登录3000人次，平均每天100人次，其登录高峰期出现在3月10号，当天总计登录240人次。</p>
+			<p>　　当月系统备份策略运行正常，完成1次全库备份，4次增量备份，系统总体运行稳定，达到预期运维目标。</p>
+			<p>　　本月总共受理各类服务35次，其中处理硬件问题3次，软件故障2次，网络问题0次，辅助数据统计15次，解答用户使用问题10次，辅助布控5次。</p>
+			<h3>本月频次较高的故障</h3>
+			<h3>下月系统运维工作重点</h3>
+		</div>
+		<div class="ui right aligned basic segment">提交日期：2015年4月1日</div>
 	</div>
 	<div class="actions">
-		<div class="ui button deny">关闭</div>
+		<span class="ui button primary"><i class="print icon"></i>打印</span>
+		<span class="ui button red"><i class="download icon"></i>下载</span>
+		<span class="ui button deny">关闭</span>
 	</div>
 </div>
 
+<script src="module/maintain/report.js"></script>
 
-<script src="module/info/deploy-passenger.js"></script>
+
